# kymograph-synthesis

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: demo.py  demo_configuration.py  demo_old.py  demo_pipeline.py  run.py  run_dynamics_sim.py  run_ground_truth_gen.py  run_microsim.py  run_statemachine_sim.py  save_kymo_examples.py
src/dynamics/: __init__.py  system.py
src/kymograph_synthesis/: __init__.py  create_kymograph.py  experimental_draw_gt_kymo.ipynb  gen_kymograph.py  ground_truth.py  sample_kymograph.py
src/kymograph_synthesis/dynamics/: __init__.py  system.py  system_simulator.py
src/kymograph_synthesis/dynamics/particle_simulator/: motion_state_collection.py  particle_simulator.py
src/kymograph_synthesis/generate/: generate_dynamics.py  generate_image_time_series.py  generate_render_classes.py  sample_kymograph.py  simulate_imaging.py  static_distribution_factory.py
src/kymograph_synthesis/params/: __init__.py  dynamics_params.py  kymograph_params.py  params.py  utils.py
src/kymograph_synthesis/params/ground_truth_params/: __init__.py  collection.py  func_params.py
src/kymograph_synthesis/params/render_params/: __init__.py  imaging_params.py  render_params.py
src/kymograph_synthesis/params/render_params/fluorophone_distributions/: __init__.py  collection.py  simplex_noise.py
src/kymograph_synthesis/pipeline/: __init__.py  generate_ground_truth.py  pipeline.py  sample_kymograph.py  simulate_dynamics.py  simulate_imaging.py  utils.py  write.py  write_log.py
src/kymograph_synthesis/pipeline/steps/: __init__.py  generate_ground_truth.py  sample_kymograph.py  simulate_dynamics.py  simulate_imaging.py
src/kymograph_synthesis/render/: __init__.py  ground_truth.py  static_path.py
src/kymograph_synthesis/render/fluorophore_distributions/: __init__.py  particle_system.py  simplex_noise.py
src/kymograph_synthesis/render/space_time_objects/: __init__.py  particle_system.py  space_time_object.py  static_simplex_noise.py
src/scripts/: generate_bidirectional_examples.py  generate_dset_1.py  generate_resample_dataset_2.py  kymo_proj_method.py  resample_speed_dset.py
src/scripts/steps/: example_kymo_projection_method.ipynb
