# https://peps.python.org/pep-0517/

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "kymograph_synthesis"
dynamic = ["version"]
authors = [
  {name = "Melisande Croft", email = "melisande.croft@fht.org"}
]

dependencies = [
    "numpy",
    "microsim",
    "opensimplex",
    "pydantic>=2.10",
]